--- a/src/main/resources/templates/wish-list.html
+++ b/src/main/resources/templates/wish-list.html
@@ -73,7 +73,7 @@
                                                 <div class="product_box d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-start mr-auto">
                                                     <a th:href="'/product/' + ${product.getProductId()}">
                                                         <div>
-                                                            <div class="product_image"><img src="images/hayvan_ciftligi.jpg"
+                                                            <div class="product_image"><img th:src="@{/static/images/hayvan_ciftligi.jpg}"
                                                                                             alt="" class="product_image_img">
                                                             </div>
                                                         </div>
