--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -98,7 +98,9 @@
                         <a class="nav-link profile-navbar-text"
                            th:attr="data-url=@{/admin-panel/pending-order(size=(${#request.getParameter('size')} ?: '3'),
                                                                             page=(${#request.getParameter('page')} ?: '1'),
-                                                                            sort=(${#request.getParameter('sort')} ?: 'date-desc'))}"
+                                                                            sort=(${#request.getParameter('sort')} ?: 'date-desc'),
+                                                                            optionFilter=(${#request.getParameter('filter')} ?: 'all'),
+                                                                            statusFilter=(${#request.getParameter('filter')} ?: 'all'))}"
                            th:href="@{#pending-order}">Pending Orders</a>
                     </li>
 
