profile review location href fixed

--- a/src/main/resources/templates/profile/_review.html
+++ b/src/main/resources/templates/profile/_review.html
@@ -350,7 +350,7 @@
                     position: 'topRight',
                     color: 'green'
                 });
-                window.location.href = "/profilreview";
+                window.location.href = "/profile#review";
                 setTimeout(function () {
                     history.pushState(null, null, ' ');
                 }, 100);
